# Spotify-Recommendations

./: .gitignore  README.md  add_indexes_constraints.sql  api_user.sql  backend_f_plan.md
backend/: app.py  config.example.json  config.py  db.py  requirements.txt  utils.py
backend/routes/: albums.py  analytics.py  artists.py  auth.py  genres.py  mood.py  playlists.py  recommendations.py  tracks.py
frontend/: README.md  pyproject.toml
frontend/src/: app.py  data.py  models.py
scripts/: setup_database.sh
sql/: 01_schema.sql  02_load_spotify_3nf.sql  03_indexes_constraints.sql  04_api_user.sql
